--- a/pixel_art_maker/styles.css
+++ b/pixel_art_maker/styles.css
@@ -3,13 +3,13 @@ body {
 }
 
 h1 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 70px;
-    margin: 0.2em;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 100px;
+    margin: 0.5em;
 }
 
 h2 {
-    margin: 1em 0 0.25em;
+    margin: 1.5em 0 0.25em;
 }
 
 h2:first-of-type {
@@ -19,12 +19,12 @@ h2:first-of-type {
 table,
 tr,
 td {
-    border: 2px solid black;
+    border: 5px solid black;
 }
 
 table {
     border-collapse: collapse;
-    margin: 0 auto;
+    margin: 2 auto;
 }
 
 tr {
