--- a/pixel_art_maker/styles.css
+++ b/pixel_art_maker/styles.css
@@ -6,10 +6,12 @@ h1 {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 100px;
     margin: 0.5em;
+    font-variant: small-caps;
 }
 
 h2 {
     margin: 1.5em 0 0.25em;
+    font-variant: small-caps;
 }
 
 h2:first-of-type {
